# splatoon-notificator

./: .env.template  LICENSE  README.md  config.py  main.py  pyproject.toml
line/: bot.py  config.py
line/message/: messages.py  template_messages.py
splatoon/: api.py  scheduler.py  scheme.py  splatoon.py  splatoon_schedule.py
